LIB-400 Add/apply 'visible' unb-lib.css fix - BS3 theme

--- a/css/bootstrap-fixes.css
+++ b/css/bootstrap-fixes.css
@@ -15,6 +15,3 @@ p a.file {
     font-size: inherit;
     font-weight: inherit;
 }
-.text-nowrap {
-    white-space: nowrap;
-}
