--- a/css/lib-fixes.css
+++ b/css/lib-fixes.css
@@ -39,6 +39,10 @@ input[type="checkbox"] {
     padding: .25rem 1.5rem;
 }
 
+.visible {
+    display: inline-block !important;
+}
+
 @media screen and (max-width: 767px) {
     .fhmm .dropdown {
         overflow-y: hidden;
